# url-shortener

./: .env  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: error.rs  interfaces.rs  main.rs
db/migrations/: 20250121222728_urls_table.sql  20250121224150_visits_table.sql  20250125032035_create_visits_trigger.sql  20250125203438_add_constraint_on_delete_cascade_to_visits.sql
url-shortener/: Cargo.toml
url-shortener/queries/: url_queries.sql
url-shortener/src/: cornucopia.rs  db_adapter.rs  errors.rs  handlers.rs  lib.rs  models.rs  service.rs  utils.rs
