[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1" }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
tokio-postgres = "0.7.12"
url-shortener = { path = "../url-shortener" }
dotenv = "0.15.0"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
