[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
url = "2.5.4"
tokio = { version = "1.43.0", features = ["full"] }
cornucopia_async = { version = "0.6.0", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2.8", features = ["derive"] }
tokio-postgres = { version = "0.7.12", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
    "with-eui48-1",
] }
futures = "0.3.31"
deadpool-postgres = "0.14.1"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
time = { version = "0.3.37", features = ["serde", "serde-human-readable"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
